Remove macro make at letter

--- a/deliverables/RapportFinal/DESCARWIN rapport final.tex
+++ b/deliverables/RapportFinal/DESCARWIN rapport final.tex
@@ -79,11 +79,11 @@
 % 	inséré entre les éléments d'une liste.
 
 %%%% debut macro %%%%
-\makeatletter
-\toks@\expandafter{\@listI}
-\edef\@listI{\the\toks@\setlength{\parsep}{0pt}}
-\edef\@listI{\the\toks@\setlength{\topsep}{0pt}}
-\makeatother
+%\makeatletter
+%\toks@\expandafter{\@listI}
+%\edef\@listI{\the\toks@\setlength{\parsep}{0pt}}
+%\edef\@listI{\the\toks@\setlength{\topsep}{0pt}}
+%\makeatother
 %%%% fin macro %%%%
 
 \definecolor{wavecrest}{cmyk}{0.83,0.0,0.79,0.20}
