Complete (final?) version of D5.4

--- a/deliverables/WP5/D5.4/D_5_4.bib
+++ b/deliverables/WP5/D5.4/D_5_4.bib
@@ -1,3 +1,5 @@
+
+
 @inproceedings{semetGECCO06,
     title = {{On the Benefits of Inoculation, an Example in Train Scheduling}},
     author = {Semet, Yann and Schoenauer, Marc},
@@ -75,6 +77,21 @@ pages={269-285}
   volume    = {abs/1107.0052},
   year      = {2011},
   ee        = {http://arxiv.org/abs/1107.0052},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{DBLP:conf/aips/BibaiSSV10,
+  author    = {Jacques Bibai and
+               Pierre Sav{\'e}ant and
+               Marc Schoenauer and
+               Vincent Vidal},
+  title     = {An Evolutionary Metaheuristic Based on State Decomposition
+               for Domain-Independent Satisficing Planning},
+  booktitle = {ICAPS},
+  year      = {2010},
+  pages     = {18-25},
+  ee        = {http://www.aaai.org/ocs/index.php/ICAPS/ICAPS10/paper/view/1414},
+  crossref  = {DBLP:conf/aips/2010},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
